src/OSD/OSD_PerfMeter.hxx
@@ -59,7 +59,7 @@ public:
   void Flush() const { perf_close_imeter(myIMeter); }
 
   //! Assures stopping upon destruction
-  virtual ~OSD_PerfMeter() { if (myIMeter >= 0) Stop(); }
+  ~OSD_PerfMeter() { if (myIMeter >= 0) Stop(); }
 
 protected:
 
